# kvd

./: .travis.yml  Cargo.toml  Makefile  README.md
conf/: default.yml  kvd.yml
src/: command.rs  error.rs  lib.rs  model.rs  parser.rs  server.rs  store.rs
src/engine/: bitcask.rs  memory.rs  mock.rs  mod.rs
tests/: tests.rs
