[package]
name = "kvd"
version = "0.1.0"
authors = ["loxp <loxppqqxol@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.5"
failure_derive = "0.1.5"
serde = {version = "^1.0.0", features = ["derive"]}
serde_json = "^1.0.0"
config = "0.9.3"
clap = "2.32.0"
slog = "2.5.2"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"